# AirBnB-Clone-Backend

./: build.sh  pyproject.toml
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
config/: authentication.py  settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_message_room_alter_message_user.py
experiences/: models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py  0003_alter_experience_category_alter_experience_host_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pets_allowed.py
medias/: models.py  serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_file_and_more.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_description_alter_amenity_description.py  0003_room_name.py  (+3 more)
users/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
wishlists/: models.py  serializers.py  urls.py  views.py
(+8 files in other folders)
